--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rede Social</title>
+    <title>Login - TechPosters</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./src/img/TechPosters.png" alt="Logo TechPosters">
+        <div>
+            <button>Login</button>
+            <button>Registro</button>
+        </div>
+    </header>
+    <main>
+        <div>
+            <form>
+                <label>Login</label>
+                <input type="text" name="email" placeholder="Seu e-mail">
+                <input type="password" name="password" placeholder="Sua senha">
+                <button type="submit">Logar</button>
+            </form>
+            <p>Ainda não possui cadastro?</p>
+            <button>Ir para a página do registro</button>
+        </div>
+    </main>
 </body>
 </html>
