--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -41,11 +41,11 @@
                 <button class="main__container--button" name="btnPostForm" type="submit">Postar</button>
             </form>
         </div>
-        <section class="main__section--follow">
+        <aside class="main__section--follow">
             <h2 class="main__follow--title">Sugestões para você seguir</h2>
             <ul class="main__follow--list">
             </ul>
-        </section>
+        </aside>
         <section class="main__section--posts">
             <ul class="main__posts--list">
                 <h2 class="main__posts--title">Posts</h2>
