--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -47,8 +47,14 @@
             </ul>
         </aside>
         <section class="main__section--posts">
+            <h2 class="main__posts--title">Posts</h2>
+            <div class="main__posts--pages">
+                <button class="btnInicial main__item--button">Página Inicial</button>
+                <button class="btnAnterior main__item--button">Página Anterior</button>
+                <button class="btnProxima main__item--button">Proxima Página</button>
+                <button class="btnFinal main__item--button">Página Final</button>
+            </div>
             <ul class="main__posts--list">
-                <h2 class="main__posts--title">Posts</h2>
 
             </ul>
         </section>
